2012-01-17    <d.scott@auckland.ac.nz>

	* incompleteBesselK, incompleteBesselKR changed to have default
	nmax = 200, because incompleteBesselK failed otherwise for x = 0.5,
	y = 0.5, lambda = -1

2012-01-05    <d.scott@auckland.ac.nz>

	* distIneqMassartPlot labels changed

	* pDist, qDist corrected and many minor changes made to
	documentation

2011-12-15    <d.scott@auckland.ac.nz>

	* runit.sampleMoments.R changed to use a fixed seed to avoid
	occasional errors in skewness and kurtosis tests

	* moranTest added, but needs a change to produce object of class
	htest

2010-12-22    <d.scott@auckland.ac.nz>

	* distCalcRange, distStepSize, distMode, integrateDens added

	* distIneqMassart, distIneqMassartPlot added

2010-08-31  David Scott  <d.scott@auckland.ac.nz>

	* runit.incompleteBesselK.R written and checked

	* incompleteBesselK using call to fortran routine added. Old R
	version of IBF changed to incompleteBesselKR

2010-08-06    <d.scott@auckland.ac.nz>

	* incompleteBesselK added

2010-07-28    <d.scott@auckland.ac.nz>

	* specification of files for graphics units tests fixed

	* minor changes to Makefile to get it to clean backups from major
	directories


2010-05-11    <d.scott@auckland.ac.nz>

	* tsHessian added to calculate the approximate Hessian of a function

2010-03-10    <d.scott@auckland.ac.nz>

	* tailPlot, normTailPlotLine, tTailPlotLine, gammaTailPlotLine
	added to allow shtTailPlotLine to be added to SkewHyperbolic to
	satisfy referee request.

2010-02-09   <d.scott@auckland.ac.nz>

	* added testing of distributions, unit tests for all
	functions. Initial version of DistributionUtils prepared.

2010-01-22    <d.scott@auckland.ac.nz>

	* inst created with test setup derived from that in gdata and
	Rmetrics packages. Some enhancements to allow for different levels
	of testing.
