@@ -1,11 +1,11 @@
 Package: DistributionUtils
-Version: 0.5-1
-Date: 2012-04-13
+Version: 0.5-2
+Date: 2014-10-05
 Title: Distribution Utilities
 Author: David Scott <d.scott@auckland.ac.nz>
 Maintainer: David Scott <d.scott@auckland.ac.nz>
-Depends: R (>= 2.3.0), RUnit
-Suggests: GeneralizedHyperbolic, VarianceGamma, SkewHyperbolic
+Depends: R (>= 2.3.0)
+Suggests: GeneralizedHyperbolic, VarianceGamma, SkewHyperbolic, RUnit
 Encoding: latin1
 Description: This package contains utilities which are of use in the
     packages I have developed for dealing with
