@@ -1,3 +1,10 @@
+2014-10-05    <d.scott@auckland.ac.nz>
+
+	* distIneqMassart example and test changed to \dontrun and level 2
+	testing because of timing requirements of CRAN
+
+	* DESCRIPTION changed to make RUnit Suggests instead of Depends
+
 2012-01-17    <d.scott@auckland.ac.nz>
 
 	* incompleteBesselK, incompleteBesselKR changed to have default
